Make gasnet-segment-fast work
For _chpl_comm_broadcast_global_vars:
Add PRIMITIVE_ALLOC_GVR, which allocates space for the global vars registry.
It is called once per locale at the beginning of the generated
"_heapAllocateGlobals" function. In addition to allocating that space, it sets
a flag to indicate that it has allocated the space for this registry. This
flag is needed to ensure that the registry is the first thing allocated so its
address can known by all processes.

All changes within the compiler directory are for this primitive.

This function is meant to broadcast Chapel global variables so that all
locales reference the same location.  Since all globals live on locale
0, put copies of their wide.addr fields into the global vars registry on
locale 0, and put the address of those wide.addr fields into the registry on
other locales. Then, on each locale except 0, copy the address stored by zero
into the location stored locally. Previously all locales stored the address of
the wide.addr field, and copied the thing at that address to their own copy.
This needed to change because the wide.addr field isn't necessarily in the
remote accessible segment, so can't be remotely accessed.

For _chpl_comm_broadcast_private:
This function is meant to broadcast global constants so they don't have
to be communicated at every fork. Since their locations are not on the remote
access segment, it's not possible to broadcast them from locale 0 with
_chpl_comm_puts. Instead, allocate them into the remote access segment, copy
their values into the allocated space, fork to each locale once per constant
and read them from locale 0.

Rename the previous _chpl_malloc to _chpl_malloc1 and add a new function
_chpl_malloc2. Add a new _chpl_malloc that selects and uses one of the other
two, based on the value of an int variable controlled by the comm layer. For
comm-none and comm-gasnet with segment-everything, it uses _chpl_malloc1, and
for segment-fast and large, it uses _chpl_malloc2.

--- a/runtime/comm-gasnet/Makefile.share
+++ b/runtime/comm-gasnet/Makefile.share
@@ -9,7 +9,7 @@ COMM_OBJS = \
 
 GASNET_INSTALL = $(RUNTIME_ROOT)/../third-party/gasnet/install/$(CHPL_MAKE_PLATFORM)
 
-include $(GASNET_INSTALL)/include/udp-conduit/udp-par.mak
+include $(GASNET_INSTALL)/include/$(CHPL_GASNET_CONDUIT)-conduit/$(CHPL_GASNET_CONDUIT)-par.mak
 
 # 
 # The following lines try to combine GASNet's favorite C compiler
@@ -32,7 +32,7 @@ include $(GASNET_INSTALL)/include/udp-conduit/udp-par.mak
 # -O0 needs to be used because GASNet generates an error if client code
 # compiled -O3 is linked to GASNet compiled with debugging enabled
 #
-RUNTIME_CFLAGS += $(GASNET_CFLAGS) -I$(GASNET_INSTALL)/include -I$(GASNET_INSTALL)/include/udp-conduit -std=gnu89 -O0
+RUNTIME_CFLAGS += $(GASNET_CFLAGS) -I$(GASNET_INSTALL)/include -I$(GASNET_INSTALL)/include/$(CHPL_GASNET_CONDUIT)-conduit -std=gnu89 -O0
 
 ifdef CHPL_DEVELOPER
 RUNTIME_CFLAGS += -Wno-strict-prototypes -Wno-missing-prototypes
