serial flag default value
Made --serial flag more like --local flag:

- made it a --[no-] flag
- made its default trigger off of CHPL_THREADS much as local
  triggers off of CHPL_COMM


Moved default setting of these flags into their initializer
to make it a little easier to determine how their values are
set when reading the compiler code.

Reorganized these two flags out of the "optimization control"
flag list and into a new "parallelism control" section in the
help message and man page.  Updated the wordings of the help
and man page a little bit.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13706 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/man/Makefile
+++ b/man/Makefile
@@ -21,7 +21,7 @@ clean:
 	rm $(TARGETS)
 
 man1/%.1: %.txt Makefile
-	$(TXT2MAN) -s 1 -I locale -I pthreads -I "on blocks" -I"Compiler Information Options" -I"Compilation Trace Options" -I"Code Size Options" -I"Optimization Control Options" -I"Run-time Semantic Check Options" -I "C Code Generation Options" -I"C Code Compilation Options" -B"cpp" -B"--no-cg-cpp-lines" -I "Miscellaneous Options" -t $* -r $(VERSION) $< > $@
+	$(TXT2MAN) -s 1 -I locale -I pthreads -I "on blocks" -I"Compiler Information Options" -I"Compilation Trace Options" -I"Code Size Options" -I"Parallelism Control Options" -I"Optimization Control Options" -I"Run-time Semantic Check Options" -I "C Code Generation Options" -I"C Code Compilation Options" -B"cpp" -B"--no-cg-cpp-lines" -I "Miscellaneous Options" -t $* -r $(VERSION) $< > $@
 
 %.html: %.1
 	rman -f HTML $< > $@
