minor madness updates
1) removed --instantiate-max flags from Chapel Makefiles.
   Recent changes cause these flags to no longer be required.

2) Added the binaries for the common directory to the svn:ignore
   list



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13720 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/aniruddha/madchap/Makefile
+++ b/test/studies/madness/aniruddha/madchap/Makefile
@@ -1,7 +1,7 @@
 GENC   = gen_c
 
 CHPL    = chpl
-CHPL_FLAGS  = --instantiate-max 512 --print-passes
+CHPL_FLAGS  = --print-passes
 #CHPL_FLAGS += -g --savec=$(GENC) --short-names
 #CHPL_FLAGS += --ccflags "-Wall"
 #CHPL_FLAGS += --no-cg-cpp-lines
