Squelched Intel warning 592 for generated code
This warning reports on potential use-before-def problems.
We get these for a bunch of codes, including associative
and opaque tests.  We don't believe any of these to be
true problems, but conservativeness on the Intel compiler's
parts, but weren't able to remove them in time for the
release, so are squashing these warnings for the time
being instead.

After the release, we should re-enable this and work on
it more.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13788 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/compiler/Makefile.intel
+++ b/make/compiler/Makefile.intel
@@ -63,10 +63,12 @@ GEN_CFLAGS = -std=c99 -mp
 #  111 : warns about unreachable statements
 #  174 : warns about expressions that have no effect
 #  177 : warns about unused variable declarations
+#  592 : warns about use before def -- we believe these to be OK, but should
+#        fix these issues ASAP
 
 WARN_CXXFLAGS = -Wall -Werror -diag-disable remark -wr304,593,810,869,981,1572,1599
 WARN_CFLAGS = $(WARN_CXXFLAGS)
-WARN_GEN_CFLAGS = $(WARN_CFLAGS) -wr111,174,177
+WARN_GEN_CFLAGS = $(WARN_CFLAGS) -wr111,174,177,592
 
 
 #
