Moved a gnu-specific setting out of a gasnet Makefile
David pointed out this morning that I had a GNU-specific
flag embedded in the GASNet Makefile that caused XT
compilations to break (and leaving the flag out caused
them to work).  This flag is due to my use of setenv(),
which I'm still looking for a workaround for.  In this
checkin, I define a new Makefile variable,
SUPPORT_SETENV_CFLAGS that is set for the gnu and intel
compilers only to add this flag.  Longer-term, we should
figure out a cleaner way to do this (possibly by having
GASNet support the ability to launch gdb in xterms... :)

David, you looked like you had gone offline, but if you
could test this on the XTs to make sure that it
resolves your issues and doesn't break anything, that
would be great.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13799 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/comm-gasnet/Makefile.share
+++ b/runtime/comm-gasnet/Makefile.share
@@ -27,12 +27,13 @@ include $(GASNET_INSTALL)/include/$(CHPL_GASNET_CONDUIT)-conduit/$(CHPL_GASNET_C
 # and it's currently our best way of conveyinng to GASNet to use gdb when
 # it launches the child tasks.  We use -std=gnu89 instead because with
 # our compilers it's what you'd get if you weren't specifying a standard
-# at all.
+# at all -- this is set using SUPPORT_SETENV_CFLAGS so as not to encode
+# gcc-specific flags into this Makefile
 #
 # -O0 needs to be used because GASNet generates an error if client code
 # compiled -O3 is linked to GASNet compiled with debugging enabled
 #
-RUNTIME_CFLAGS += $(GASNET_CFLAGS) -I$(GASNET_INSTALL)/include -I$(GASNET_INSTALL)/include/$(CHPL_GASNET_CONDUIT)-conduit -std=gnu89 -O0
+RUNTIME_CFLAGS += $(GASNET_CFLAGS) -I$(GASNET_INSTALL)/include -I$(GASNET_INSTALL)/include/$(CHPL_GASNET_CONDUIT)-conduit $(SUPPORT_SETENV_CFLAGS) -O0
 
 ifdef CHPL_DEVELOPER
 RUNTIME_CFLAGS += -Wno-strict-prototypes -Wno-missing-prototypes
