--- a/make/compiler/Makefile.intel
+++ b/make/compiler/Makefile.intel
@@ -70,6 +70,11 @@ WARN_CXXFLAGS = -Wall -Werror -diag-disable remark -wr304,593,810,869,981,1572,1
 WARN_CFLAGS = $(WARN_CXXFLAGS)
 WARN_GEN_CFLAGS = $(WARN_CFLAGS) -wr111,174,177,592
 
+#
+# a hacky flag necessary currently due to our use of setenv in the runtime code
+#
+SUPPORT_SETENV_CFLAGS = -std=gnu89 -wr10121
+
 
 #
 # developer settings
