Hacking in support for ARMCI on Solaris
With a bit of wrestling, got Chapel code to
compile and link against ARMCI on Solaris
machines (e.g., sunbeam).  The Makefiles
involved are currently quite specialized
to Solaris, just as they previously were
to Linux (but since our Fortran compilers
on Linux don't work, it wasn't very useful
there).  Will need to generalize these
over time.

To reproduce, make sure you're on a Solaris
box and do:
  cd third-party
  make mpich1
  make armci
  cd $CHPL_HOME
  setenv CHPL_COMM armci
  make depend all

This should allow you to compile and link
multilocale Chapel codes against ARMCI.
However, since the ARMCI version of the
Chapel comm interfaces is out-of-date,
the execution will currently very quickly
halt in one of the comm routines that I
stubbed out.  Next step should be to
implement these routines for ARMCI.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13900 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/etc/Makefile.comm-armci
+++ b/runtime/etc/Makefile.comm-armci
@@ -1,4 +1,4 @@
 ARMCI_INSTALL = $(CHAPEL_ROOT)/third-party/armci/armci-GPCsockets
-MPI_INSTALL = $(CHAPEL_ROOT)/third-party/mpich1/install/linux
+MPI_INSTALL = $(CHAPEL_ROOT)/third-party/mpich1/install/sunos
 
-LIBS += -L$(ARMCI_INSTALL)/lib/LINUX -L$(MPI_INSTALL)/lib -larmci -lmpich
+LIBS += -L$(ARMCI_INSTALL)/lib/SOLARIS -L$(MPI_INSTALL)/lib -larmci -lmpich -lsocket -lnsl -lrt
