Put the list of symbol names that need to be mangled into its own separate file with one symbol name per line.  Added a script to the relevant Makefile to put these symbol names inside calls to cnames.put().  The output of this script is #include'd in codegen.cpp.  This script allows arbitrary C code along with the symbol names, so I took advantage of this and made the symbol names "purge" and "task" special only when targeting the MTA.  (I believe this is the first time target-dependent code has been put into the compiler itself.)  I went ahead and added all the C keywords that are not Chapel keywords to the list of symbol names.
Updated the Xcode project to accommodate this new file and also removed chplmem_tests.c and chplmem_tests.h from the project.

git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13955 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/compiler/passes/Makefile
+++ b/compiler/passes/Makefile
@@ -9,7 +9,7 @@ include $(COMPILER_ROOT)/make/Makefile.compiler.head
 PASSES_OBJDIR = $(OBJ_SUBDIR)
 include Makefile.share
 
-TARGETS = $(PASSES_OBJS)
+TARGETS = reservedSymbolNames.h $(PASSES_OBJS)
 
 include $(COMPILER_ROOT)/make/Makefile.compiler.subdirrules
 
@@ -19,3 +19,6 @@ FORCE:
 # standard footer
 #
 include $(COMPILER_ROOT)/make/Makefile.compiler.foot
+
+reservedSymbolNames.h: reservedSymbolNames
+	sed -e 's/^\([ 	]*\)\([A-Za-z_][A-Za-z0-9_]*\)/\1cnames.put("\2", 1);/' <$< >$@
