Next steps towards supporting launcher utilities
More reorganization changes that don't actually
add the launcher command yet -- the next step
was a big one and scared me into committing
this separately.

* Reorganized the Makefile.share files to distinguish
  between those sources that will get compiled into
  the launcher and the main binary.

* Moved the compiler-generated config var table
  stuff into its own file at code generation time
  to allow it to be linked into both the launcher
  and the main binary.

* Added a launcher.pl script to match the compiler.pl,
  platform.pl, etc. scripts, to indicate what the
  default launcher for a given platform is.  Now
  they all default to "none".

* Added a test_launch script that I'm using to
  test things that simply launches the binary
  requested locally, with some debug printing.

* Updated the shared Makefiles to query the
  launcher as with other variables.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14103 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -28,6 +28,10 @@ ifndef CHPL_MAKE_COMM
 include $(CHAPEL_ROOT)/make/Makefile.comm
 endif
 
+ifndef CHPL_MAKE_LAUNCHER
+include $(CHAPEL_ROOT)/make/Makefile.launcher
+endif
+
 
 #
 # default CFLAGS, based on other settings
