--- a/runtime/comm-armci/Makefile.share
+++ b/runtime/comm-armci/Makefile.share
@@ -1,6 +1,9 @@
-COMM_SRCS = \
-	chpl_cfg_comm.c \
+LAUNCHER_COMM_SRCS = \
         chpl_cfg_comm_locales.c \
+
+COMM_SRCS = \
+	$(LAUNCHER_COMM_SRCS) \
+	chpl_cfg_comm.c \
 
 SVN_SRCS = $(COMM_SRCS)
 SRCS = $(SVN_SRCS)
