Started refactoring of armci/third-party Makefiles
Defined a bunch of directory locations related to
third-party stuff in make/Makefile.base and rewrote
the ARMCI Makefiles to avoid embedding so many
assumptions into the Makefiles.  The most specific
example of this was adding a utility script to the
armci directory that translates from our
CHPL_TARGET_PLATFORM setting to the requisite
ARMCI TARGET variable (e.g., linux -> LINUX,
sunos -> SOLARIS).




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14275 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -53,6 +53,22 @@ endif
 #
 # Directories, files, and locations
 #
+THIRD_PARTY_DIR = $(CHAPEL_ROOT)/third-party
+
+ARMCI_DIR = $(THIRD_PARTY_DIR)/armci
+ARMCI_VERSION = GPCsockets
+ARMCI_TARGET = $(shell $(ARMCI_DIR)/util/target.pl)
+ARMCI_SRC_DIR = $(ARMCI_DIR)/armci-$(ARMCI_VERSION)
+ARMCI_INSTALL_DIR = $(ARMCI_DIR)/armci-$(ARMCI_VERSION)/lib/$(ARMCI_TARGET)
+ARMCI_LIB_DIR = $(ARMCI_INSTALL_DIR)
+
+GASNET_DIR = $(THIRD_PARTY_DIR)/gasnet
+GASNET_INSTALL_DIR = $(GASNET_DIR)/install/$(CHPL_MAKE_PLATFORM)-$(CHPL_MAKE_COMPILER)
+GASNET_LIB_DIR = $(GASNET_INSTALL_DIR)/lib
+
+MPICH1_DIR = $(THIRD_PARTY_DIR)/mpich1
+MPICH1_INSTALL_DIR = $(MPICH1_DIR)/install/$(CHPL_MAKE_PLATFORM)
+MPICH1_LIB_DIR = $(MPICH1_INSTALL_DIR)/lib
 
 
 #
