--- a/runtime/etc/Makefile.comm-armci
+++ b/runtime/etc/Makefile.comm-armci
@@ -1,4 +1,3 @@
-ARMCI_INSTALL = $(CHAPEL_ROOT)/third-party/armci/armci-GPCsockets
-MPI_INSTALL = $(CHAPEL_ROOT)/third-party/mpich1/install/sunos
+LIBS += -L$(ARMCI_LIB_DIR) -L$(MPICH1_LIB_DIR) -larmci -lmpich $(ARMCI_PLATFORM_SPECIFIC_LIBS) -lnsl -lrt
 
-LIBS += -L$(ARMCI_INSTALL)/lib/SOLARIS -L$(MPI_INSTALL)/lib -larmci -lmpich -lsocket -lnsl -lrt
+# Does sunos need -lsocket?
