First working "launcher" using mpirun + Makefile refactorings
Established a new "launcher" concept which supports the idea of
wrapping a program like mpirun, aprun, load leveler, etc. into
a small front-end binary that does command line parsing and
then runs the "real" program, created as a second binary
(currently called, lamely and continuing in the ZPL tradition,
foo_real where foo is the program name -- suggestions for 
improvement appreciated).  Use two binaries for this purpose to
support the concept of running the launcher binary on the host
platform and the _real binary on the target platform (though
today both are compiled using the same settings... the target's).

The launcher command is determined by a script util/launcher.pl 
that makes a best decision as to what launcher to use based on
the communication layer and communication substrate (e.g.,
the conduit in GASNet or the choice of MPI, PVM, etc. in ARMCI).
Currently, it is set up to say "mpirun" for ARMCI running over
MPI and "none" in all other cases.  Eventually we'll want to
add support for more cases (like the XT's launch commands, apsim,
etc.).  As with other settings, the default can be overridden
using CHPL_LAUNCHER

I also added a util script commSubstrate.pl that returns the
communication substrate for a given platform.  Currently, for
gasnet it returns portals for cray-xt and udp otherwise (but
these values are not used anywhere, I believe), while for armci
it returns mpi, and for everything else it returns none.  It
can be overridden using the CHPL_COMM_SUBSTRATE variable.

Most of the launcher code is currently stored in src/main_launcher.c
which is a parallel to src/main.c.  It does the command-line
parsing and determines the number of locales, and then passes
this information along to a CHPL_LAUNCHER-specific routine that
converts it into a string that can be system()'d by main_launcher.c.
Each launcher's code is contained within a subdirectory of runtime 
named launch-$(CHPL_LAUNCHER)/c

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -83,6 +83,7 @@ printplatform:
 	@echo "CHPL_MAKE_COMPILER    = $(CHPL_MAKE_COMPILER)"
 	@echo "CHPL_MAKE_THREADS     = $(CHPL_MAKE_THREADS)"
 	@echo "CHPL_MAKE_COMM        = $(CHPL_MAKE_COMM)"
+	@echo "CHPL_MAKE_LAUNCHER    = $(CHPL_MAKE_LAUNCHER)"
 
 #
 # OBJ_SUBDIR_MADE creates either a directory or a symbolic link,
@@ -93,7 +94,8 @@ printplatform:
 # is the directory with slashes escaped appropriately for use in
 # Makefile command rules.
 #
-OBJ_SUBDIR = $(CHPL_MAKE_PLATFORM)/$(CHPL_MAKE_COMPILER)
+GEN_SUBDIR = gen
+OBJ_SUBDIR = $(GEN_SUBDIR)/$(CHPL_MAKE_PLATFORM)/$(CHPL_MAKE_COMPILER)
 OBJ_SUBDIR_TIMESTAMP = $(OBJ_SUBDIR)/.timestamp
 OBJ_SUBDIR_MADE = $(OBJ_SUBDIR_TIMESTAMP)
 OBJ_SUBDIR_SAFESLASH = $(subst /,\\/, $(OBJ_SUBDIR))
@@ -111,6 +113,11 @@ $(OBJ_SUBDIR_TIMESTAMP):
 	@ln -s $(CHPLDEVTMP)/chapel-$(USER)$(CURDIR)/$(CHPL_MAKE_PLATFORM) .
 	@-touch $(OBJ_SUBDIR_TIMESTAMP)
 endif
+
+RUNTIME_UNIQUE_SUBDIR = comm-$(CHPL_MAKE_COMM)/threads-$(CHPL_MAKE_THREADS)
+LAUNCHER_UNIQUE_SUBDIR = comm-$(CHPL_MAKE_COMM)/launch-$(CHPL_MAKE_LAUNCHER)
+RUNTIME_OBJDIR = $(OBJ_SUBDIR)/$(RUNTIME_UNIQUE_SUBDIR)
+LAUNCHER_OBJDIR = $(OBJ_SUBDIR)/$(LAUNCHER_UNIQUE_SUBDIR)
 
 
 #
