--- a/runtime/launch-mpirun/Makefile
+++ b/runtime/launch-mpirun/Makefile
@@ -1,18 +1,16 @@
 RUNTIME_ROOT = ..
-RUNTIME_SUBDIR = comm-armci
+RUNTIME_SUBDIR = launch-mpirun
 
 #
 # standard header
 #
 include $(RUNTIME_ROOT)/make/Makefile.runtime.head
 
-COMM_OBJDIR = $(RUNTIME_OBJDIR)
-COMM_LAUNCHER_OBJDIR = $(LAUNCHER_OBJDIR)
+LAUNCH_OBJDIR = $(LAUNCHER_OBJDIR)
 include Makefile.share
 
 TARGETS = \
-	$(COMM_OBJS) \
-	$(COMM_LAUNCHER_OBJS) \
+	$(LAUNCHER_OBJS) \
 
 include $(RUNTIME_ROOT)/make/Makefile.runtime.subdirrules
 
