--- a/runtime/src/Makefile.share
+++ b/runtime/src/Makefile.share
@@ -18,11 +18,23 @@ COMMON_SRCS = \
 MAIN_SRCS = \
 	main.c \
 
+MAIN_LAUNCHER_SRCS = \
+	main_launcher.c
+
 SVN_SRCS = $(COMMON_SRCS) $(MAIN_SRCS)
 SRCS = $(SVN_SRCS)
 
 COMMON_OBJS = \
 	$(COMMON_SRCS:%.c=$(COMMON_OBJDIR)/%.o)
 
+
 MAIN_OBJS = \
 	$(MAIN_SRCS:%.c=$(COMMON_OBJDIR)/%.o)
+
+ifneq ($(CHPL_MAKE_LAUNCHER),none)
+COMMON_LAUNCHER_OBJS = \
+	$(COMMON_LAUNCHER_SRCS:%.c=$(COMMON_LAUNCHER_OBJDIR)/%.o)
+
+MAIN_LAUNCHER_OBJS = \
+	$(MAIN_LAUNCHER_SRCS:%.c=$(COMMON_LAUNCHER_OBJDIR)/%.o)
+endif
