--- a/runtime/comm-armci/Makefile.include
+++ b/runtime/comm-armci/Makefile.include
@@ -1,5 +1,8 @@
-COMM_OBJDIR = $(RUNTIME_ROOT)/comm-armci/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
+COMM_SUBDIR = comm-armci
 
-ALL_SRCS += $(CURDIR)/comm-armci/*.c
+COMM_OBJDIR = $(RUNTIME_ROOT)/$(COMM_SUBDIR)/$(RUNTIME_OBJDIR)
+COMM_LAUNCHER_OBJDIR = $(RUNTIME_ROOT)/$(COMM_SUBDIR)/$(LAUNCHER_OBJDIR)
 
-include $(RUNTIME_ROOT)/comm-armci/Makefile.share
+ALL_SRCS += $(CURDIR)/$(COMM_SUBDIR)/*.c
+
+include $(RUNTIME_ROOT)/$(COMM_SUBDIR)/Makefile.share
