--- a/runtime/comm-armci/Makefile.share
+++ b/runtime/comm-armci/Makefile.share
@@ -1,8 +1,8 @@
-LAUNCHER_COMM_SRCS = \
+COMM_LAUNCHER_SRCS = \
         chpl_cfg_comm_locales.c \
 
 COMM_SRCS = \
-	$(LAUNCHER_COMM_SRCS) \
+	$(COMM_LAUNCHER_SRCS) \
 	chpl_cfg_comm.c \
 
 SVN_SRCS = $(COMM_SRCS)
@@ -10,6 +10,11 @@ SRCS = $(SVN_SRCS)
 
 COMM_OBJS = \
 	$(COMM_SRCS:%.c=$(COMM_OBJDIR)/%.o)
+
+ifneq ($(CPL_MAKE_LAUNNCHER),none)
+COMM_LAUNCHER_OBJS = \
+	$(COMM_LAUNCHER_SRCS:%.c=$(COMM_LAUNCHER_OBJDIR)/%.o)
+endif
 
 ARMCI_INSTALL = $(RUNTIME_ROOT)/../third-party/armci/armci-GPCsockets
 MPI_INSTALL = $(RUNTIME_ROOT)/../third-party/mpich1/install/linux
