--- a/runtime/comm-gasnet/Makefile.include
+++ b/runtime/comm-gasnet/Makefile.include
@@ -1,5 +1,8 @@
-COMM_OBJDIR = $(RUNTIME_ROOT)/comm-gasnet/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
+COMM_SUBDIR = comm-gasnet
 
-ALL_SRCS += $(CURDIR)/comm-gasnet/*.c
+COMM_OBJDIR = $(RUNTIME_ROOT)/$(COMM_SUBDIR)/$(RUNTIME_OBJDIR)
+COMM_LAUNCHER_OBJDIR = $(RUNTIME_ROOT)/$(COMM_SUBDIR)/$(LAUNCHER_OBJDIR)
 
-include $(RUNTIME_ROOT)/comm-gasnet/Makefile.share
+ALL_SRCS += $(CURDIR)/$(COMM_SUBDIR)/*.c
+
+include $(RUNTIME_ROOT)/$(COMM_SUBDIR)/Makefile.share
