--- a/runtime/etc/Makefile.include
+++ b/runtime/etc/Makefile.include
@@ -6,12 +6,26 @@ LD = $(CC)
 include $(CHAPEL_ROOT)/runtime/etc/Makefile.threads-$(CHPL_MAKE_THREADS)
 include $(CHAPEL_ROOT)/runtime/etc/Makefile.comm-$(CHPL_MAKE_COMM)
 
-CHAPEL_RT_INC_DIR = $(CHAPEL_ROOT)/runtime/include/threads-$(CHPL_MAKE_THREADS) -I$(CHAPEL_ROOT)/runtime/include/comm-$(CHPL_MAKE_COMM) -I$(CHAPEL_ROOT)/runtime/include/comp-$(CHPL_MAKE_COMPILER) -I$(CHAPEL_ROOT)/runtime/include
-CHAPEL_RT_LIB_DIR = $(CHAPEL_ROOT)/lib/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
+CHAPEL_RT_INC_DIR = $(CHAPEL_ROOT)/runtime/include/threads-$(CHPL_MAKE_THREADS) -I$(CHAPEL_ROOT)/runtime/include/comm-$(CHPL_MAKE_COMM) -I$(CHAPEL_ROOT)/runtime/include/comp-$(CHPL_MAKE_COMPILER) -I$(CHAPEL_ROOT)/runtime/include/$(CHPL_MAKE_PLATFORM) -I$(CHAPEL_ROOT)/runtime/include
+CHAPEL_RT_LIB_DIR = $(CHAPEL_ROOT)/lib/$(RUNTIME_UNIQUE_SUBDIR)
+
+CHAPEL_LN_INC_DIR = -I$(CHAPEL_ROOT)/runtime/include/$(CHPL_MAKE_PLATFORM) -I$(CHAPEL_ROOT)/runtime/include
+CHAPEL_LN_LIB_DIR = $(CHAPEL_ROOT)/lib/$(LAUNCHER_UNIQUE_SUBDIR)
+
+LAUNCHER_SRC_NAME = $(TMPDIRNAME)/config.c
 
 all: $(CHPL_CL_OBJS) FORCE
-	$(CC) $(GEN_CFLAGS) $(COMP_GEN_CFLAGS) -c -o $(TMPBINNAME).o -I$(CHAPEL_RT_INC_DIR)/$(CHPL_MAKE_PLATFORM) -I$(CHAPEL_RT_INC_DIR) -I. $(CHPLSRC)
+	$(CC) $(GEN_CFLAGS) $(COMP_GEN_CFLAGS) -c -o $(TMPBINNAME).o -I$(CHAPEL_RT_INC_DIR) -I. $(CHPLSRC)
 	$(LD) $(GEN_LFLAGS) $(COMP_GEN_LFLAGS) -o $(TMPBINNAME) -L$(CHAPEL_RT_LIB_DIR) $(TMPBINNAME).o $(CHAPEL_RT_LIB_DIR)/main.o $(CHPL_CL_OBJS) -lchpl -lm $(LIBS)
+ifneq ($(CHPL_MAKE_LAUNCHER),none)
+	cp $(TMPBINNAME) $(BINNAME)_real
+	rm $(TMPBINNAME)
+	echo "#include \"chplcgfns.h\"" > $(LAUNCHER_SRC_NAME)
+	echo "#include \"config.h\"" >> $(LAUNCHER_SRC_NAME)
+	echo "#include \"_config.c\"" >> $(LAUNCHER_SRC_NAME)
+	$(CC) $(GEN_CFLAGS) $(COMP_GEN_CFLAGS) -c -o $(TMPBINNAME).o -I$(CHAPEL_LN_INC_DIR) -I. $(LAUNCHER_SRC_NAME)
+	$(LD) $(GEN_LFLAGS) $(COMP_GEN_LFLAGS) -o $(TMPBINNAME) -L$(CHAPEL_LN_LIB_DIR) $(TMPBINNAME).o $(CHAPEL_LN_LIB_DIR)/main_launcher.o $(CHPL_CL_OBJS) -lchpllaunch
+endif
 	cp $(TMPBINNAME) $(BINNAME)
 	rm $(TMPBINNAME)
 	$(TAGS_COMMAND)
