--- a/runtime/src/Makefile.include
+++ b/runtime/src/Makefile.include
@@ -1,5 +1,8 @@
-COMMON_OBJDIR = $(RUNTIME_ROOT)/src/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
+COMMON_SUBDIR = src
 
-ALL_SRCS += $(CURDIR)/src/*.c
+COMMON_OBJDIR = $(RUNTIME_ROOT)/$(COMMON_SUBDIR)/$(RUNTIME_OBJDIR)
+COMMON_LAUNCHER_OBJDIR = $(RUNTIME_ROOT)/$(COMMON_SUBDIR)/$(LAUNCHER_OBJDIR)
 
-include $(RUNTIME_ROOT)/src/Makefile.share
+ALL_SRCS += $(CURDIR)/$(COMMON_SUBDIR)/*.c
+
+include $(RUNTIME_ROOT)/$(COMMON_SUBDIR)/Makefile.share
