Fixed typo on threads-mta Makefile
This was one of those "wasn't quite holding control down
hard enough on emacs" errors (combined with the fact that
I didn't test on the full cross-product of platforms).
This should re-enable the mta/xmt tests to run tonight.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14304 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/threads-mta/Makefile.include
+++ b/runtime/threads-mta/Makefile.include
@@ -5,4 +5,4 @@ THREADS_OBJDIR = $(RUNTIME_ROOT)/$(THREADS_SUBDIR)/$(RUNTIME_OBJDIR)
 
 ALL_SRCS += $(CURDIR)/$(THREADS_SUBDIR)/*.c
 
-include $(RUNTIME_ROOT)/$(THREADS_SUBDIRx)/Makefile.share
+include $(RUNTIME_ROOT)/$(THREADS_SUBDIR)/Makefile.share
