moved scalarReplace, inlineFunctions, and complex2record to optimizations/
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14391 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/compiler/optimizations/Makefile.share
+++ b/compiler/optimizations/Makefile.share
@@ -1,10 +1,13 @@
 OPTIMIZATIONS_SRCS = \
 	collapseBlocks.cpp \
-        copyPropagation.cpp \
+	complex2record.cpp \
+	copyPropagation.cpp \
 	deadCodeElimination.cpp \
+	inlineFunctions.cpp \
 	liveVariableAnalysis.cpp \
 	reachingDefinitionsAnalysis.cpp \
-	removeUnnecessaryGotos.cpp
+	removeUnnecessaryGotos.cpp \
+	scalarReplace.cpp
 
 SVN_SRCS = $(OPTIMIZATIONS_SRCS)
 SRCS = $(SVN_SRCS)
