Flipped on -static for MTA compiles
Flipped on the -static flag at linktime for MTA compiles, which
seems to be necessary on linux-ion these days, though nobody's
sure why it ever worked for us before.  All the same, shouldn't
hurt to use it.

With this, our MTA compiles ought to start working tonight.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14428 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/compiler/Makefile.cray-mta
+++ b/make/compiler/Makefile.cray-mta
@@ -26,5 +26,6 @@ CFLAGS =
 COMP_CFLAGS = $(CFLAGS)
 RUNTIME_CFLAGS = $(CFLAGS)
 GEN_CFLAGS = $(CFLAGS) -WS 189
+GEN_LDFLAGS = -static
 
 COMP_CFLAGS_NONCHPL = -w
