--- a/make/compiler/Makefile.cray-mta
+++ b/make/compiler/Makefile.cray-mta
@@ -26,6 +26,6 @@ CFLAGS =
 COMP_CFLAGS = $(CFLAGS)
 RUNTIME_CFLAGS = $(CFLAGS)
 GEN_CFLAGS = $(CFLAGS) -WS 189
-GEN_LDFLAGS = -static
+GEN_LFLAGS = -static
 
 COMP_CFLAGS_NONCHPL = -w
