Fixing subdirectories under lib/
Recently noticed that our libraries were not being pushed
as far down under lib/ as we'd intended, probably as a
result of my last Makefile refactoring.  In particular,
the platform and compiler were not being used to create
the lib/ subdirectory.  This fixes that issue and factors
the lib/ path into the Makefile.base directory to avoid
repetition.

Also updated README.files to more accurately illustrate
the lib/ hierarchy.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14487 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -95,7 +95,8 @@ printplatform:
 # Makefile command rules.
 #
 GEN_SUBDIR = gen
-OBJ_SUBDIR = $(GEN_SUBDIR)/$(CHPL_MAKE_PLATFORM)/$(CHPL_MAKE_COMPILER)
+PLAT_COMP_SUBDIR = $(CHPL_MAKE_PLATFORM)/$(CHPL_MAKE_COMPILER)
+OBJ_SUBDIR = $(GEN_SUBDIR)/$(PLAT_COMP_SUBDIR)
 OBJ_SUBDIR_TIMESTAMP = $(OBJ_SUBDIR)/.timestamp
 OBJ_SUBDIR_MADE = $(OBJ_SUBDIR_TIMESTAMP)
 OBJ_SUBDIR_SAFESLASH = $(subst /,\\/, $(OBJ_SUBDIR))
@@ -114,10 +115,12 @@ $(OBJ_SUBDIR_TIMESTAMP):
 	@-touch $(OBJ_SUBDIR_TIMESTAMP)
 endif
 
-RUNTIME_UNIQUE_SUBDIR = comm-$(CHPL_MAKE_COMM)/threads-$(CHPL_MAKE_THREADS)
-LAUNCHER_UNIQUE_SUBDIR = comm-$(CHPL_MAKE_COMM)/launch-$(CHPL_MAKE_LAUNCHER)
-RUNTIME_OBJDIR = $(OBJ_SUBDIR)/$(RUNTIME_UNIQUE_SUBDIR)
-LAUNCHER_OBJDIR = $(OBJ_SUBDIR)/$(LAUNCHER_UNIQUE_SUBDIR)
+COMM_THREAD_SUBDIR = comm-$(CHPL_MAKE_COMM)/threads-$(CHPL_MAKE_THREADS)
+COMM_LAUNCH_SUBDIR = comm-$(CHPL_MAKE_COMM)/launch-$(CHPL_MAKE_LAUNCHER)
+RUNTIME_OBJDIR = $(OBJ_SUBDIR)/$(COMM_THREAD_SUBDIR)
+LAUNCHER_OBJDIR = $(OBJ_SUBDIR)/$(COMM_LAUNCH_SUBDIR)
+LIB_RT_DIR = lib/$(PLAT_COMP_SUBDIR)/$(COMM_THREAD_SUBDIR)
+LIB_LN_DIR = lib/$(PLAT_COMP_SUBDIR)/$(COMM_LAUNCH_SUBDIR)
 
 
 #
