--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -43,11 +43,11 @@ LAUNCH_LIB_OBJS = \
 	$(LAUNCHER_OBJS) \
 
 
-RUNTIME_DIR = ../lib/$(RUNTIME_UNIQUE_SUBDIR)
+RUNTIME_DIR = ../$(LIB_RT_DIR)
 RUNTIME_LIB = $(RUNTIME_DIR)/libchpl.a
 RUNTIME_DIR_TIMESTAMP = $(RUNTIME_DIR)/.timestamp
 
-LAUNCHER_DIR = ../lib/$(LAUNCHER_UNIQUE_SUBDIR)
+LAUNCHER_DIR = ../$(LIB_LN_DIR)
 LAUNCHER_LIB = $(LAUNCHER_DIR)/libchpllaunch.a
 LAUNCHER_DIR_TIMESTAMP = $(LAUNCHER_DIR)/.timestamp
 
